# Praktikum2222222

./: CMakeLists.txt  Fix the bug.txt  GetRarestElement.h  GetRarestElement.tpp  LivingThing.cpp  LivingThing.h  MaxNVector.h  MaxNVector.tpp  NPC.h  Plant.h  Stone.h  Warrior.cpp  Warrior.h  WarriorWizard.cpp  WarriorWizard.h  Wizard.cpp  Wizard.h  WizardThrong.cpp  WizardThrong.h  WorldThing.cpp  WorldThing.h  Zettel 3.2.txt  Zettel 4.1.txt  aktien.rar  beach on the zex.blend  beach on the zex.blend1  linked-list.cpp  linked-list.h  linked-list.hpp  main.cpp
build-ShoppingCartProject-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-ShoppingCartProject-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/ShoppingCartProject_autogen/: deps  mocs_compilation.cpp
build-ShoppingCartProject-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/ShoppingCartProject_autogen/EWIEGA46WW/: moc_shoppingcart.cpp  moc_shoppingcart.cpp.d
build-simpleGUI-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-simpleGUI-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/simpleGUI_autogen/: deps  mocs_compilation.cpp
build-simpleGUI-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/simpleGUI_autogen/EWIEGA46WW/: moc_simplegui.cpp  moc_simplegui.cpp.d
build-simpleGUI-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/simpleGUI_autogen/include/: ui_simplegui.h
