cmake_minimum_required(VERSION 3.26)
project(Praktikum2)

set(CMAKE_CXX_STANDARD 17)

add_executable(Praktikum2
        main.cpp
        WorldThing.cpp
        WorldThing.h
        LivingThing.cpp
        LivingThing.h
        NPC.cpp
        NPC.h
        Stone.cpp
        Stone.h
        Plant.cpp
        Plant.h
        Warrior.cpp
        Warrior.h
        Wizard.cpp
        Wizard.h
        WarriorWizard.cpp
        WarriorWizard.h
        WizardThrong.cpp
        WizardThrong.h
)
